# mph-handwriting

./: .env.example  .gitignore  README.md  SECURITY.md  handwriting-pipeline.code-workspace  test-prop-1.heic  test-prop-2.heic  vercel.json
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt  test_positioning.py
apps/api/app/: auth.py  main.py
apps/api/app/api/: auth.py  history.py  proposals.py  transcribe.py
apps/api/app/models/: config.py  schemas.py
apps/api/app/services/: export_service.py  formatting_service.py  ocr_service.py
apps/api/app/storage/: file_manager.py
apps/web/: .vercelignore  package-lock.json  package.json  vercel.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/invoice/history/: page.tsx
apps/web/src/components/: LoginPage.tsx  ProposalDisplay.tsx  UploadForm.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/lib/: api.ts
scripts/: build_dataset.py  eval_accuracy.py  split_pdf_to_images.py
